Fix select being on task form
The select was being cropped because the <body> tag on html was
shorter than the screen, now it fills the whole screen but can be
expanded if necessary

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -16,6 +16,7 @@ body {
 
 body {
   display: flex;
+  min-height: 100vh;
 
   @media (max-width: 600px) {
     flex-direction: column;
